[package]
name = "generals_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_tuple = "0.5.0"
tracing = "0.1.37"
native-tls = "0.2.11"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
rand = "0.8.5"
oxymcts = { path = "../OxyMcts" }
num-traits = "0.2.16"
rayon = "1.8.0"
itertools = "0.11.0"
async-scoped = { version = "0.7.1", features = ["use-tokio"] }
noisy_float = "0.2.0"
dotenv = "0.15.0"
